# restpose

./: .gitignore  AUTHORS  COPYING  ChangeLog  HACKING  INSTALL  Makefile.am  NEWS  README  bootstrap  configure.ac  index.html  params.json
docs/: Makefile  categorisation.rst  clients.rst  collections.rst  conf.py  field_config.rst  index.rst  install.rst  intro.rst  release_checklist  search_json.rst  todo  urls.rst
examples/: lang_guess_model.json  schema.json
libs/: Makefile.mk  README
libs/cjk-tokenizer/: LICENSE  README.rst
libs/cjk-tokenizer/cjk-tokenizer/: cjk-hanconvert.cc  cjk-hanconvert.h  cjk-tokenizer.cc  cjk-tokenizer.h  makefile  test.cc
libs/cjk-tokenizer/cjk-tokenizer-perl/: Makefile.PL  Tokenizer.xs  cjk-tokenizer  typemap
libs/cjk-tokenizer/cjk-tokenizer-perl/lib/Lingua/CJK/: Tokenizer.pm
libs/cjk-tokenizer/cjk-tokenizer-perl/t/: tokenizer.t
libs/geospatial/: latlong_distance_keymaker.cc  latlong_posting_source.cc  latlongcoord.cc
libs/geospatial/xapian/: geospatial.h
libs/jsoncpp/src/lib_json/: json_value.cpp  json_writer.cpp
libs/libmicrohttpd/: MHD_config.h.in  configure.ac
libs/libmicrohttpd/src/daemon/: daemon.c
libs/mongo-c-driver/src/: mongo.h  platform_hacks.h
libs/unittest-cpp/UnitTest++/.svn/: entries
libs/unittest-cpp/UnitTest++/docs/.svn/: entries
libs/unittest-cpp/UnitTest++/src/: Checks.cpp  Checks.h
libs/unittest-cpp/UnitTest++/src/.svn/: entries
libs/unittest-cpp/UnitTest++/src/Posix/.svn/: entries
libs/unittest-cpp/UnitTest++/src/Win32/.svn/: entries
libs/unittest-cpp/UnitTest++/src/tests/.svn/: entries
libs/unittest-cpp/scripts/.svn/: entries
libs/xapiancommon/: README  diritor.h  hashterm.cc  safeuuid.h  serialise.cc  serialise.h  socketpair.h  utils.cc
perftest/: Makefile.mk  logperf.cc
python/: COPYING  covertests.sh  runtest.sh  setup.cfg  setup.py
python/docs/: client-api.rst  conf.py  doc-status.rst  index.rst  modules.rst  overview.rst
python/restpose/: __init__.py  client.py  errors.py  query.py  resource.py  version.py
python/restpose/unittests/: helpers.py  index_test.py  query_test.py  search_test.py
scripts/: get_wikipedia_sample_text
src/: Makefile.mk  restpose.cc
src/cli/: Makefile.mk  cli.cc  cli.h
src/dbgroup/: Makefile.mk  dbgroup.cc  dbgroup.h
src/features/: Makefile.mk  category_handlers.cc  category_handlers.h  category_tasks.cc  category_tasks.h  checkpoint_handlers.cc  checkpoint_handlers.h  checkpoint_tasks.cc  checkpoint_tasks.h  coll_handlers.cc  coll_handlers.h  coll_tasks.cc  coll_tasks.h
src/httpserver/: Makefile.mk  httpserver.cc  httpserver.h  response.h
src/importer/filesystem/: Makefile.mk  filesystem_import.cc  filesystem_import.h
src/importer/mongo/: Makefile.mk  mongo_import.cc  mongo_import.h
src/jsonmanip/: Makefile.mk  conditionals.cc  conditionals.h  jsonpath.cc  jsonpath.h  mapping.cc  mapping.h
src/jsonxapian/: Makefile.mk  category_hierarchy.cc  category_hierarchy.h  collconfig.cc  collconfig.h  collconfigs.cc  collconfigs.h  collection.cc  collection.h  collection_pool.cc  collection_pool.h  docdata.cc  docdata.h  doctojson.cc  doctojson.h  docvalues.cc  docvalues.h  facetinfohandler.cc  facetinfohandler.h  indexing.cc  indexing.h  infohandlers.cc  infohandlers.h  occurinfohandler.cc  occurinfohandler.h  pipe.cc  pipe.h  query_builder.cc  query_builder.h  schema.cc  schema.h  slotname.cc  slotname.h  taxonomy.cc  taxonomy.h
src/logger/: Makefile.mk  logger.cc  logger.h
src/matchspies/: Makefile.mk  facetmatchspy.cc  facetmatchspy.h  termoccurmatchspy.cc  termoccurmatchspy.h
src/ngramcat/: Makefile.mk  categoriser.cc  categoriser.h  profile.cc  profile.h
src/postingsources/: Makefile.mk  multivalue_keymaker.cc  multivalue_keymaker.h  multivaluerange_source.cc  multivaluerange_source.h
src/rest/: Makefile.mk  default_routes.cc  default_routes.h  handler.cc  handler.h  handlers.cc  handlers.h  router.cc  router.h  routes.cc  routes.h
src/server/: Makefile.mk  basetasks.cc  basetasks.h  checkpoints.cc  checkpoints.h  collection_pool.cc  collection_pool.h  ignore_sigpipe.cc  ignore_sigpipe.h  result_handle.cc  result_handle.h  server.cc  server.h  signals.cc  signals.h  task_manager.cc  task_manager.h  task_queue_group.h  task_threads.cc  task_threads.h  tasks.cc  tasks.h  thread_pool.cc  thread_pool.h
src/utils/: Makefile.mk  compression.cc  compression.h  io_wrappers.cc  io_wrappers.h  jsonutils.cc  jsonutils.h  queueing.h  rmdir.cc  rmdir.h  rsperrors.cc  rsperrors.h  safe_inttypes.h  safe_zlib.h  stringutils.h  threading.cc  threading.h  threadsafequeue.h  utils.cc  utils.h  validation.cc  validation.h  winservice.cc  winservice.h
static/: index.html
static/static/browse/: browse.js  index.html
static/static/status/: index.html  status.js
unittests/: Makefile.mk  category_hierarchy.cc  collection.cc  docdata.cc  doctojson.cc  pipe.cc  runner.cc  schema.cc  search.cc  slotname.cc  threadsafequeue.cc
unittests/jsonmanip/: conditionals.cc  mapping.cc  walker.cc
unittests/ngramcat/: categoriser.cc  profile.cc
unittests/server/: checkpoints.cc
